# azure-agw-acme-tool

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  pyproject.toml
.kilocode/skills/openspec-bulk-archive-change/: SKILL.md
.kilocode/skills/openspec-continue-change/: SKILL.md
.kilocode/skills/openspec-ff-change/: SKILL.md
.kilocode/skills/openspec-new-change/: SKILL.md
.kilocode/skills/openspec-sync-specs/: SKILL.md
.kilocode/skills/openspec-verify-change/: SKILL.md
.kilocode/workflows/: opsx-bulk-archive.md  opsx-continue.md  opsx-ff.md  opsx-new.md  opsx-sync.md  opsx-verify.md
azure-function/: function_app.py  requirements.txt
openspec/changes/acme-client/: proposal.md  tasks.md
openspec/changes/azure-function-responder/: proposal.md  tasks.md
openspec/changes/azure-gateway-client/: design.md  tasks.md
openspec/changes/cert-converter/: design.md  proposal.md
openspec/changes/cli-cleanup/: design.md  proposal.md
openspec/changes/cli-init/: design.md
openspec/changes/cli-issue/: design.md  proposal.md  tasks.md
openspec/changes/cli-renew/: design.md  tasks.md
openspec/changes/cli-status/: design.md
openspec/changes/config-schema/: proposal.md  tasks.md
openspec/changes/fix-stale-cli-tests/: proposal.md  tasks.md
openspec/changes/issue-flow-core/: design.md  proposal.md  tasks.md
openspec/changes/logging-setup/: tasks.md
openspec/specs/acme-client/: spec.md
openspec/specs/agent-git-workflow/: spec.md
openspec/specs/azure-function-responder/: spec.md
openspec/specs/azure-gateway-client/: spec.md
openspec/specs/cli-cleanup/: spec.md
openspec/specs/cli-issue/: spec.md
openspec/specs/cli-root-options/: spec.md
src/az_acme_tool/: __init__.py  acme_client.py  azure_gateway.py  cert_converter.py  cleanup_command.py  cli.py  config.py  init_command.py  issue_command.py  logging.py  renew_command.py  status_command.py
tests/: test_acme_client.py  test_azure_function.py  test_azure_gateway.py  test_cert_converter.py  test_cleanup_command.py  test_cli.py  test_config.py  test_init_command.py  test_issue_command.py  test_logging.py  test_renew_command.py  test_status_command.py
(+62 files in other folders)
